# Cmake_tut

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  math_utils.h  package-lock.json
Src/: main.c
adc/: CMakeLists.txt
adc/Inc/: adc.h
adc/Src/: adc.c  adc_hal.c
book/: 00-introduction.md  01-hello.md  02-header-source.md  03-inc-src-layout.md  04-menus-library.md  05-generators-commands.md  06-cmocka-ctest.md  07-mocking-adc.md  08-build-options.md  09-config-header.md  10-lib-plus-lib.md  README.md  appendix-a-commands.md  appendix-b-cmocka-vs-ctest.md  appendix-c-autogenerated-files.md
config/: app_config.h.in
math/: CMakeLists.txt
menus/: CMakeLists.txt
menus/Inc/: debug_menu.h  main_menu.h  settings_menu.h
menus/Src/: debug_menu.c  main_menu.c  settings_menu.c
tests/: CMakeLists.txt  test_adc.c  test_math.c  test_menus.c
tools/: make-pdf.mjs  make-pdf.sh  package.json
